Fix the project print page layout issue

--- a/themes/bootstrap_dragon/css/local.css
+++ b/themes/bootstrap_dragon/css/local.css
@@ -304,12 +304,16 @@ font-size: 18px;
 }
 
 .page-title{
-	width: 90%;
+	width: 80%;
     display: inline-block;
 }
 
 .button-group{
 	display: inline-block;
+}
+
+.btn-group.pull-right {
+  margin-right: 20px;
 }
 
 .title{
